UI: Fix overflow issues in repo
- Fix layout overflow in repo file list.
- Fix invisible status icon in file view and commit list. In file view,
  the icon was moved to the left because I could not figure out a proper
  fix because of HTML tables.
- Added title attribute to commit messages.
- Fixed two CSS linter warnings in existing CSS.
- Fixed CI variable check in 'make css'.

Fixes: https://github.com/go-gitea/gitea/issues/7180

--- a/public/less/_repository.less
+++ b/public/less/_repository.less
@@ -1112,6 +1112,7 @@
         .show-form-container {
             text-align: left;
         }
+
         .choose.branch {
             .octicon {
                 padding-right: 10px;
@@ -2218,6 +2219,19 @@ tbody.commit-list {
     vertical-align: baseline;
 }
 
+.commit-list .message-wrapper {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: calc(100% - 24px);
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.commit-list .message-wrapper .commit-status-link {
+    display: inline-block;
+    vertical-align: middle;
+}
+
 .commit-body {
     white-space: pre-wrap;
 }
@@ -2226,6 +2240,7 @@ tbody.commit-list {
     &.top {
         text-align: left;
     }
+
     .commit-body {
         margin: 0;
     }
